--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 # URL to your backend API
 VITE_API_URL="http://localhost:5000/api"
+
+# Optional support contact configuration (used by SupportChatWidget)
+# Use E.164 format for numbers e.g., +919876543210
+VITE_SUPPORT_WHATSAPP_NUMBER="+919342503401"
+VITE_SUPPORT_PHONE="+919342503401"
+VITE_SUPPORT_EMAIL="support@meghdoottextiles.com"
+VITE_BRAND_NAME="MeghDoot Textiles"
