--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # URL to your backend API
-VITE_API_URL="http://localhost:5080/api"
+VITE_API_URL="/api"
 # Local DB is provided by the root docker-compose `db` service on port 6545
 PGHOST_PORT=6545
 ADMINER_PORT=8095
