--- a/server/package.json
+++ b/server/package.json
@@ -26,12 +26,14 @@
     "zod": "^3.25.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.7",
+    "@types/multer": "^2.0.0",
     "prisma": "^6.1.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
